[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["LJlkdskdjflsa <liliangjya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/tests",
]