[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["LJlkdskdjflsa <liliangjya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
uvloop = "^0.17.0"
bpython = "^0.23"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/tests",
]